# pycrtm

./: CMakeLists.txt  Makefile  README.md  crtm.cfg  crtm_io.py  discover_install_gfortran_openmp.sh  discover_install_ifort_openmp.sh  discover_modules_gfortran_openmp.sh  discover_modules_gnu.csh  discover_modules_gnu.sh  discover_modules_ifort_openmp.sh  discover_modules_intel.csh  discover_modules_intel.sh  discover_spack_gnu.sh  discover_spack_intel.sh  homebrew_install.sh  homebrew_install_bkarpowi.sh  homebrew_install_userdir.sh  make_it_so.bash  make_it_so.sh  make_it_so_discover.bash  make_it_so_discover_intel.bash  pyCRTM.py  pycrtm.f90  pyproject.toml  setup.cfg  setup.py  setup_pycrtm.py
testCases/: test_atms.ipynb  test_atms.py  test_atms_jac.py  test_atms_jacobian.py  test_atms_no_clouds.py  test_atms_subset.py  test_atms_subset_cloudnames.py  test_atms_threads.py  test_cloudsat.py  test_cloudsat_jacobian.py  test_cris.py  test_cris_jac.py  test_cris_jacobian.py  test_cris_no_clouds.py  test_cris_subset.py  test_cris_threads.py
testCases/data/: case1.h5  case2.h5  case3.h5  case4.h5
